Fixing the error on mobile devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -19,14 +19,10 @@
   background-attachment: fixed;
   background-position: center;
   background-repeat: repeat;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 4rem;
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-  }
 }
 
 .footer {
